@@ -29,15 +29,18 @@ AC_DEFUN([GNOME_DEBUG_CHECK],
 	fi
 ])
 
-dnl AM_DISABLE_DEPRECATED ()
-dnl define DISABLE_DEPRECATED
+dnl AM_MAINTAINER_MODE_DEFINES ()
+dnl define DISABLE_DEPRECATED and ENABLE_WERROR
 dnl
-AC_DEFUN([AM_DISABLE_DEPRECATED],
+AC_DEFUN([AM_MAINTAINER_MODE_DEFINES],
 [
 	if test $USE_MAINTAINER_MODE = yes; then
 		DISABLE_DEPRECATED="-DG_DISABLE_DEPRECATED -DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED -DGNOME_DISABLE_DEPRECATED -DPANGO_DISABLE_DEPRECATED -DBONOBO_DISABLE_DEPRECATED"
+		ENABLE_WERROR="-Werror"
 	else
 		DISABLE_DEPRECATED=""
+		ENABLE_WERROR=""
 	fi
 	AC_SUBST(DISABLE_DEPRECATED)
+	AC_SUBST(ENABLE_WERROR)
 ])
